# podCaster

./: .env  README.md  main.py  pyproject.toml
podCaster/: db.sqlite3  manage.py
podCaster/mainApp/: main.py  views.py
podCaster/podCaster/: asgi.py  settings.py  urls.py  wsgi.py
podCaster/static/: asker.css
podCaster/templates/: asker.html
