[project]
name = "podcaster"
version = "0.1.0"
description = "A Podcast Generator using AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2.3",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "markdown>=3.8.2",
    "openai>=1.93.0",
]
